src/mapgd_0.4/error
data_types/sample_name.cc: In function ‘std::istream& operator>>(std::istream&, Sample_name&)’:
data_types/sample_name.cc:23:2: error: ‘sample_names’ was not declared in this scope
  sample_names.clear();
  ^
data_types/sample_name.cc:25:23: error: no matching function for call to ‘getline(std::string&, std::istream&)’
  std::getline(line, in);
                       ^
data_types/sample_name.cc:25:23: note: candidates are:
In file included from /usr/include/c++/4.8/string:53:0,
                 from /usr/include/c++/4.8/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8/bits/ios_base.h:41,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from data_types/sample_name.h:6,
                 from data_types/sample_name.cc:1:
/usr/include/c++/4.8/bits/basic_string.tcc:1068:5: note: template<class _CharT, class _Traits, class _Alloc> std::basic_istream<_CharT, _Traits>& std::getline(std::basic_istream<_CharT, _Traits>&, std::basic_string<_CharT, _Traits, _Alloc>&, _CharT)
     getline(basic_istream<_CharT, _Traits>& __in,
     ^
/usr/include/c++/4.8/bits/basic_string.tcc:1068:5: note:   template argument deduction/substitution failed:
data_types/sample_name.cc:25:23: note:   ‘std::string {aka std::basic_string<char>}’ is not derived from ‘std::basic_istream<_CharT, _Traits>’
  std::getline(line, in);
                       ^
In file included from /usr/include/c++/4.8/string:52:0,
                 from /usr/include/c++/4.8/bits/locale_classes.h:40,
                 from /usr/include/c++/4.8/bits/ios_base.h:41,
                 from /usr/include/c++/4.8/ios:42,
                 from /usr/include/c++/4.8/ostream:38,
                 from /usr/include/c++/4.8/iostream:39,
                 from data_types/sample_name.h:6,
                 from data_types/sample_name.cc:1:
/usr/include/c++/4.8/bits/basic_string.h:2793:5: note: template<class _CharT, class _Traits, class _Alloc> std::basic_istream<_CharT, _Traits>& std::getline(std::basic_istream<_CharT, _Traits>&, std::basic_string<_CharT, _Traits, _Alloc>&)
     getline(basic_istream<_CharT, _Traits>& __is,
     ^
/usr/include/c++/4.8/bits/basic_string.h:2793:5: note:   template argument deduction/substitution failed:
data_types/sample_name.cc:25:23: note:   ‘std::string {aka std::basic_string<char>}’ is not derived from ‘std::basic_istream<_CharT, _Traits>’
  std::getline(line, in);
                       ^
data_types/sample_name.cc: In function ‘std::ostream& operator<<(std::ostream&, const Sample_name&)’:
data_types/sample_name.cc:33:62: error: conversion from ‘std::vector<std::basic_string<char> >::const_iterator {aka __gnu_cxx::__normal_iterator<const std::basic_string<char>*, std::vector<std::basic_string<char> > >}’ to non-scalar type ‘std::vector<std::basic_string<char> >::iterator {aka __gnu_cxx::__normal_iterator<std::basic_string<char>*, std::vector<std::basic_string<char> > >}’ requested
  std::vector <std::string>::iterator it=x.sample_names.begin();
                                                              ^
make: *** [data_types/sample_name.o] Error 1
